完成第六个功能，项目已经完成!可能还需要修复一下报错信息

--- a/src/App.css
+++ b/src/App.css
@@ -40,7 +40,9 @@ ol, ul {
 .square:focus {
     outline: none;
 }
-
+.square-highlight{
+    background:yellow;
+}
 .kbd-navigation .square:focus {
     background: #ddd;
 }
